# dspy-intro

./: .gitignore  .tool-versions  README.md  install.sh  optimized_program.json  pyproject.toml
dspy_intro/: class_signatues.py  contract_reviews.py  custom_module.py  demo_metrics.py  demo_optimisers.py  demo_optimisers_2.py  hello_world.py
dspy_intro/data/contracts/: data_processing_agreement.txt  lease_agreement.txt  master_services_agreement.txt  non_disclosure_agreement.txt  severance_agreement.txt
dspy_intro/data/playbooks/: data_processing_agreements.txt  lease_agreements.txt  master_services_agreements.txt  non_disclosure_agreements.txt  severance_agreements.txt
dspy_intro/utils/: assessments.py  data.py  settings.py
